--- a/src/components/AutocompleteControl/style.css
+++ b/src/components/AutocompleteControl/style.css
@@ -1,10 +1,10 @@
-.autocomlete-control {
+.autocomplete-control {
     margin: 30px;
     position: relative;
     width: 300px;
 }
 
-.autocomlete-control__input {
+.autocomplete-control__input {
     box-shadow: inset #abacaf 0 0 0 2px;
     border: 0;
     background: rgba(0, 0, 0, 0);
@@ -21,18 +21,18 @@
     transition: all 0.2s ease;
 }
 
-.autocomlete-control__input:hover {
+.autocomplete-control__input:hover {
     outline: 0;
     box-shadow: 0 0 0 0 #fff inset, #777777 0 0 0 2px;
 }
 
-.autocomlete-control__input:focus {
+.autocomplete-control__input:focus {
     background: #fff;
     outline: 0;
     box-shadow: 0 0 0 0 #fff inset, #525252 0 0 0 2px;
 }
 
-.autocomlete-suggeststions {
+.autocomplete-suggeststions {
     position: absolute;
     top: 40px;
     z-index: 1;
@@ -42,21 +42,21 @@
     box-shadow: 0 0 0 0 #fff inset, #777777 0 0 0 2px;
 }
 
-.autocomlete-suggeststions__list {
+.autocomplete-suggeststions__list {
     display: contents;
 }
 
-.autocomlete-suggeststions__list li {
+.autocomplete-suggeststions__list li {
     background: rgb(255, 255, 255);
     padding: 10px;
 }
 
-.autocomlete-suggeststions__list li:hover {
+.autocomplete-suggeststions__list li:hover {
     cursor: pointer;
     background: rgb(167, 167, 167);
 }
 
-.autocomlete-suggeststions__list li.autocomlete-suggeststions__loader:hover {
+.autocomplete-suggeststions__list li.autocomlete-suggeststions__loader:hover {
     cursor: default;
     background: rgb(255, 255, 255);
 }
